# netbox-initializers

./: .flake8  .gitignore  .yamllint.yaml  README.md  Release.md  pyproject.toml  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: codeql-analysis.yml  feature-test.yml  linter.yml  pr-test.yml  release.yml  tests.yml
docs/dev/: Branches.md  Release.md
netbox_initializers/: __init__.py
netbox_initializers/management/commands/: load_initializer_data.py
src/: pyproject.toml  setup.py
src/netbox_initializers/: __init__.py  version.py
src/netbox_initializers/initializers/: __init__.py  aggregates.py  asns.py  base.py  cables.py  circuit_types.py  circuits.py  cluster_groups.py  cluster_types.py  clusters.py  config_contexts.py  config_templates.py  contact_groups.py  contact_roles.py  contacts.py  custom_fields.py  custom_links.py  device_roles.py  device_types.py  devices.py  groups.py  interfaces.py  ip_addresses.py  locations.py  macs.py  manufacturers.py  object_permissions.py  platforms.py  power_feeds.py  power_panels.py  prefix_vlan_roles.py  prefixes.py  primary_ips.py  providers.py  rack_roles.py  rack_types.py  racks.py  regions.py  rirs.py  route_targets.py  (+17 more)
src/netbox_initializers/initializers/yaml/: cables.yml  clusters.yml  config_contexts.yml  config_templates.yml  contacts.yml  custom_fields.yml  custom_links.yml  device_roles.yml  device_types.yml  devices.yml  interfaces.yml  ip_addresses.yml  locations.yml  macs.yml  object_permissions.yml  platforms.yml  power_panels.yml  prefixes.yml  providers.yml  rack_types.yml  racks.yml  service_templates.yml  services.yml  site_groups.yml  sites.yml  tags.yml  users.yml  virtual_machines.yml  virtualization_disks.yml  virtualization_interfaces.yml  webhooks.yml
src/netbox_initializers/management/commands/: copy_initializers_examples.py  load_initializer_data.py
test/: Dockerfile  docker-compose.yml  gh-functions.sh  test.sh
test/config/: plugins.py
test/env/: netbox.env  postgres.env  redis-cache.env  redis.env
test/initializer-data/: custom_fields.yml  custom_links.yml  devices.yml  interfaces.yml  ip_addresses.yml  object_permissions.yml  power_panels.yml  prefixes.yml  racks.yml  services.yml  users.yml  vlans.yml  webhooks.yml
